fixed responsive alignment on project pages

--- a/main.css
+++ b/main.css
@@ -8,6 +8,9 @@
   [class*="col-"] {
       text-align: center;
   }
+  [class*="context"] {
+      text-align: left;
+  }
   button {
     margin-left: auto;
     margin-right: auto;
